@@ -103,7 +103,15 @@ has PageLabels $.PageLabels is entry;           # (Optional; PDF 1.3) A number t
 
 has PDF::Names $.Names is entry;        # (Optional; PDF 1.2) The document’s name dictionary
 
-has DestNamed %.Dests is entry(:alias<destinations>, :coerce(&coerce-dest));    # (Optional; PDF 1.1; must be an indirect reference) A dictionary of names and corresponding destinations
+has DestNamed %.Dests is entry(:coerce(&coerce-dest));    # (Optional; PDF 1.1; must be an indirect reference) A dictionary of names and corresponding destinations
+
+method destinations is rw {
+    do with self<Names> {
+        do with .<Dests> {
+            .name-tree;
+        }
+    } // self<Dests>
+}
 
 has PDF::ViewerPreferences $.ViewerPreferences is entry; # (Optional; PDF 1.2) A viewer preferences dictionary specifying the way the document is to be displayed on the screen.
 
